--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     apply plugin: 'kotlin-kapt'
 
     implementation 'androidx.core:core-ktx:1.7.0'
