--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ android {
 dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     apply plugin: 'kotlin-kapt'
 
     implementation 'androidx.core:core-ktx:1.7.0'
