--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
     packagingOptions {
         exclude 'META-INF/atomicfu.kotlin_module'
     }
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
 
 }
 
